Fix not showing first profile image new user

--- a/client/src/styles/Navbar.css
+++ b/client/src/styles/Navbar.css
@@ -174,6 +174,19 @@
 overflow: hidden;
 }
 
+/* Target images with alt attribute across different classes */
+.profile-picture[alt],
+.navsidebar-profile-picture[alt],
+.user-profile-image[alt] {
+
+  object-fit: cover; 
+}
+
+  
+
+
+
+
 .navbar img {
   max-width: 50px; 
   max-height: 50px; 
